# remind

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/: args.rs  channel.rs  main.rs  reminder.rs  reminders.rs  request.rs  server.rs
