[package]
name = "remind"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/remind"
repository = "https://github.com/d-e-s-o/remind.git"
readme = "README.md"
categories = [
  "accessibility",
  "api-bindings",
  "command-line-utilities",
  "os::unix-apis"
]
keywords = [
  "async",
  "dbus",
  "desktop",
  "linux",
  "notification",
]
description = """
A program/daemon for scheduling reminder notifications after a given
duration.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[build-dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
grev = { version = "0.1.3", default-features = false }

[dependencies]
anyhow = { version = "1.0", default-features = false, features = ["std"] }
clap = { version = "4.6", default-features = false, features = ["color", "derive", "error-context", "help", "std", "usage"] }
dbus = { version = "0.9", default-features = false, features = ["stdfd", "vendored"] }
libc = { version = "0.2", default-features = false }
